--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./src/screens/assets/fonts"
+    ]
   }
 }
