IAP intrigation in android and ios

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -98,8 +98,10 @@ android {
         applicationId "com.eFlashHindi"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 10
-        versionName "1.9"
+        versionCode 11
+        versionName "2.0"        
+        missingDimensionStrategy "store", "play"
+
     }
 
     splits {
